# autonomous-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  autonomous_rag_workflow.md  docker-compose.yml  experiments.sqlite  first.md  opencode.json  pyproject.toml  requirements.txt  ui.py  walkthrough.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  static.yml
.swarm/: schema.sql  state.json
config/: baseline_config.yaml  loader.py  model_routing.yaml  models.py  openai_pricing.yaml  run_settings.yaml  settings.py
docs/: architecture.md  developer_guide.md  evaluator_code_breakdown.md  goal.md  modularity_audit.md  overnight_execution_guide.md  project_architecture_breakdown.md  ruflo_agents.md  ruflo_features.md  scientist_io.md  sparc_skills.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph-data.js  graph.html  graph.json  index.html  manifest.json
prompts/: scientist_v1.txt
pytest_temp/search_space_loader_test/: run_settings.yaml
reports/: overnight_run_report.md
scratch/: test_brain.py
scripts/: enrich_hotpotqa_questions.py  export_experiments.py  fetch_baseline.py  run_overnight.py  setup_environment.sh  split_graph_html.py  test_loop.py
src/core/: __init__.py  events.py  interfaces.py  model_catalog.py  provider.py  provider_factory.py
src/data/: __init__.py  question_loader.py
src/evaluator/: __init__.py  eval_node.py  ir_metrics.py  ragas_runner.py  ragas_setup.py  scorer.py
src/indexer/: __init__.py  collection_cache.py  collection_manager.py  collection_names.py  index_builder.py  parser_registry.py
src/models/: __init__.py  experiment.py  metrics.py  rag_config.py
src/orchestrator/: __init__.py  budget_guard.py  config_loader.py  event_adapter.py  graph.py  overnight_display.py  overnight_eval.py  state.py  validator.py
src/prompts/: __init__.py  templates.py
src/rag_pipeline/: __init__.py  generator.py  openrouter_reranker.py  pipeline.py  retriever.py  smoke_tester.py
src/reporter/: __init__.py  report_writer.py
src/scientist/: __init__.py  brain.py  candidates.py  deduplicator.py  prompt_builder.py  proposal.py  reflection.py
src/storage/: __init__.py  cost_tracker.py  database.py  db.py  experiment_log.py  models.py
src/tui/: app.py  app.tcss  formatting.py  state.py
src/utils/: __init__.py  config_helpers.py  config_loader.py  context_budget.py  conversation_summary.py  function_trace.py  hashing.py  json_repair.py  langfuse_compat.py  logger.py  openai_client.py  openrouter.py  openrouter_embedding.py
tests/: conftest.py  test_brain.py  test_cost_tracker.py  test_deduplicator.py  test_di.py  test_event_adapter.py  test_events.py  test_graph_event_bus_wiring.py  test_index_builder_progress.py  test_indexer_node_progress.py  test_ir_metrics.py  test_metrics.py  test_openai_client.py  test_openrouter.py  test_overnight_display.py  test_parser_registry.py  test_provider_factory.py  test_rag_config_expansion.py  test_ragas_runner_parser.py  test_run_overnight_tui_wiring.py  test_run_overnight_validate.py  test_scorer.py  test_search_space_constraints.py  test_smoke_tester.py  test_storage.py
tests/tui/: test_app.py  test_best_config_panel.py  test_budget_panel.py  test_formatting.py  (+6 more)
(+12 files in other folders)
